Update and rename .env.example to .env

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Bot Token [Required]
-BOT_TOKEN=
+BOT_TOKEN=OTIyODk3MTY0NjU5NzQwNzQ1.YcII9g.KHL_1ljRRhyhG2b24Hzsxzu-oJQ
 
 # Mongo Database Connection String [Required]
-MONGO_CONNECTION=
+MONGO_CONNECTION=mongodb+srv://vdop2006:vdop2006@vdbot.gtcee.mongodb.net/strn
 
 # Webhooks [Optional]
 ERROR_LOGS=
