--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ ERROR_LOGS=
 JOIN_LEAVE_LOGS=
 
 # Dashboard [Required for dashboard]
-BOT_SECRET=
-SESSION_PASSWORD=
+BOT_SECRET=bVcazgqIIX9NH_ILtXvEtJSCZVue0Jgw
+SESSION_PASSWORD=solaropxd
 
 # API Keys [Required for Weather Command]
 WEATHERSTACK_KEY=
